<resources>
    <string name="app_name">Quản lý sân bóng</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Trang chủ</string>
    <string name="title_dashboard">Đã lưu</string>
    <string name="title_notifications">Lịch của tôi</string>
    <string name="title_Acount">Tôi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>

    <string name="menu_home">Home</string>
    <string name="menu_quanlylich">Quản lý lịch</string>
    <string name="menu_thongke">Thống kê</string>
    <string name="menu_account">Tài khoản</string>
    <string name="menu_showall">Danh sách sân</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string-array name="month">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>