<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.booking_pitch.Admin.admin_home.FragmentAdmin"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_admin" />

    <fragment
        android:id="@+id/nav_quanlylich"
        android:name="com.example.booking_pitch.Admin.quanLyLich.AdminFragment_QLL"
        android:label="@string/menu_quanlylich"
        tools:layout="@layout/fragment_admin__q_l_l" />

    <fragment
        android:id="@+id/nav_thongke"
        android:name="com.example.booking_pitch.Admin.admin_thongke.AdminFragment_TK"
        android:label="@string/menu_thongke"
        tools:layout="@layout/fragment_admin__t_k" />
    <fragment
        android:id="@+id/nav_all_pitch"
        android:name="com.example.booking_pitch.Admin.admin_home.FragmentAllPitch"
        android:label="@string/menu_showall"
        tools:layout="@layout/activity_all_pitch" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.booking_pitch.Admin.admin_home.AcountAdminFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_acount_admin" />
</navigation>